# Lycaria-News

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md
apis/: Cargo.toml
apis/src/: lib.rs
pkg/pheme/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pheme-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pheme/usr/share/doc/pheme/: README.md
pkg/pheme/usr/share/licenses/pheme/: LICENSE
src/: args.rs  config.rs  main.rs  utils.rs
src/Pheme-0.0.2/: .SRCINFO
