workspace = { members = ["apis"] }

[package]
name = "pheme"
version = "0.0.1"
license="MIT"
authors=["Fenris Lycaon"]
description = "A basic new reader in Rust"
repository = "https://github.com/LycaonIndustries/pheme"
edition = "2021"
readme = "README.md"
keywords = ["rust", "news", "package", "test"]

[dependencies]
apis = {path = "./apis"}
colour = "2.1.0"
dotenv = "0.15.0"
