workspace = { members = ["apis"] }

[package]
name = "pheme"
version = "0.0.1"
license="MIT"
authors=["Rishabh Anand"]
description = "A basic new reader in Rust"
repository = "https://github.com/LycaonIndustries/pheme"
edition = "2021"
readme = "README.md"
keywords = ["rust", "news", "package", "test"]

[dependencies]
apis = {path = "./apis"}
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
urlencoding = "2.1.3"
