workspace = { members = ["apis"] }

[package]
name = "pheme"
version = "0.1.0"
license="MIT"
authors=["Rishabh Anand"]
description = "A basic new reader in Rust"
repository = "https://github.com/LycaonIndustries/pheme"
edition = "2021"
readme = "README.md"
keywords = ["rust", "news", "package", "test"]

[dependencies]
apis = {path = "./apis"}
clap = { version = "4", features = ["derive"] }
dirs = "4.0"
serde = {version="1.0.206", features=["derive"]}
serde_json = "1.0.124"
toml = "0.5"
urlencoding = "2.1.3"
